--- a/dsek-frontend/src/css/Home.css
+++ b/dsek-frontend/src/css/Home.css
@@ -31,4 +31,7 @@
     .wide {
         display: none;
     }
+    .wide-header {
+        display: none;
+    }
 }
